--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+
+	<UL>
+		<li>
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+				<img  src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg"  alt="image">
+			</a>
+		</li>
+		<li>
+			<a  href="https://en.wikipedia.org/wiki/Poodle">
+				<img  src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"  alt="images">
+			</a>
+		</li>
+	</UL>
+
+
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
